[Bug][Dashboards] Buttons of Portlets are not clearly visible [Bug] Tab headers styling

--- a/bundles/AdminBundle/Resources/public/css/admin.css
+++ b/bundles/AdminBundle/Resources/public/css/admin.css
@@ -2340,6 +2340,6 @@ ul.leaflet-draw-actions.leaflet-draw-actions-top.leaflet-draw-actions-bottom li:
     color: #8e8e8e;
 }
 
-.x-panel-header .x-tool-tool-el {
+.x-panel-header-default .x-tool-tool-el{
     color: #484B4E;
 }
